Naming Convention FIxes

--- a/WebApplicationCrud/Views/Panel/Index.cshtml
+++ b/WebApplicationCrud/Views/Panel/Index.cshtml
@@ -112,7 +112,7 @@
                                     <td>
                                     </td>
                                     <td>
-                                        @product.id
+                                        @product.Id
                                     </td>
                                     <td>
                                         @product.name
