--- a/WebApplicationCrud/Views/ShoppingCart/Index.cshtml
+++ b/WebApplicationCrud/Views/ShoppingCart/Index.cshtml
@@ -32,7 +32,7 @@
                         @((line.Amount * line.Product.price).ToString("c"))
                     </td>
 
-                    <td class="text-center"><a class="glyphicon glyphicon-remove text-danger remove" asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-drinkId="@line.Product.id"></a></td>
+                    <td class="text-center"><a class="glyphicon glyphicon-remove text-danger remove" asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-drinkId="@line.Product.Id"></a></td>
                 </tr>
 
             }
