Automapper Implementation And Convention Fixes

--- a/WebApplicationCrud/Views/Panel/Index.cshtml
+++ b/WebApplicationCrud/Views/Panel/Index.cshtml
@@ -115,7 +115,7 @@
                                         @product.Id
                                     </td>
                                     <td>
-                                        @product.name
+                                        @product.Name
                                     </td>
                                     <td style="max-width:200px !important">
                                         @{
@@ -134,7 +134,7 @@
                                         }
                                     </td>
                                     <td>
-                                        @product.price
+                                        @product.Price
                                     </td>
                                     <td>
                                         
