--- a/WebApplicationCrud/Views/Home/ProductPanel.cshtml
+++ b/WebApplicationCrud/Views/Home/ProductPanel.cshtml
@@ -41,7 +41,7 @@
 
                             @for (int i = 0; i < Model.Images.Count; i++)
                             {
-                                var image_path = $"/img/productAndBlogAddedImages{Model.Images[i].Imagename}";
+                                var image_path = $"/img/productAndBlogAddedImages{Model.Images[i]}";
                                 if (i == 0)
                                 {
                                     <li class="nav-item">
@@ -75,7 +75,7 @@
 
                             @for (int i = 0; i < Model.Images.Count; i++)
                             {
-                                var image_path = $"/img/productAndBlogAddedImages/{Model.Images[i].Imagename}";
+                                var image_path = $"/img/productAndBlogAddedImages/{Model.Images[i]}";
                                 if (i == 0)
                                 {
                                     <div class="tab-pane active" id="tabs-0" role="tabpanel">
@@ -108,7 +108,7 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
                         <div class="product__details__text">
-                            <h4>@Model.name</h4>
+                            <h4>@Model.Name</h4>
                             <div class="rating">
                                 @*rating------------------------------------*@
                                 @*<i class="fa fa-star"></i>
@@ -121,7 +121,7 @@
                             </div>
 
                             @*price---------------------------------------*@
-                            <h3>$@Model.price <span>70.00</span></h3>
+                            <h3>$@Model.Price <span>70.00</span></h3>
                             <p>
                                 Coat with quilted lining and an adjustable hood. Featuring long sleeves with adjustable
                                 cuff tabs, adjustable asymmetric hem with elastic side tabs and a front zip fastening
@@ -189,7 +189,7 @@
                                 <img src="~/img/shop-details/details-payment.png" alt="">
                                 <ul>
 
-                                    <li><span>Categories:</span> @Model.category</li>
+                                    <li><span>Categories:</span> @Model.Category</li>
                                     <li><span>Tag:</span> Clothes, Skin, Body</li>
                                 </ul>
                             </div>
