--- a/WebApplicationCrud/Views/ShoppingCart/Index.cshtml
+++ b/WebApplicationCrud/Views/ShoppingCart/Index.cshtml
@@ -26,10 +26,10 @@
             {
                 <tr>
                     <td class="text-center">@line.Amount</td>
-                    <td class="text-left">@line.Product.name</td>
-                    <td class="text-right">@line.Product.price</td>
+                    <td class="text-left">@line.Product.Name</td>
+                    <td class="text-right">@line.Product.Price</td>
                     <td class="text-right">
-                        @((line.Amount * line.Product.price).ToString("c"))
+                        @((line.Amount * line.Product.Price).ToString("c"))
                     </td>
 
                     <td class="text-center"><a class="glyphicon glyphicon-remove text-danger remove" asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-drinkId="@line.Product.Id"></a></td>
