--- a/WebApplicationCrud/Views/_ViewImports.cshtml
+++ b/WebApplicationCrud/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using WebApplicationCrud.ViewModels
 @using WebApplicationCrud.ViewModels.PanelVMs
 @using WebApplicationCrud.ViewModels.BlogVMs
+@using WebApplicationCrud.ViewModels.HomeVMs
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
