--- a/WebApplicationCrud/Views/Shared/_ProductListing.cshtml
+++ b/WebApplicationCrud/Views/Shared/_ProductListing.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Product>
+﻿@model List<ProductViewModel>
 
 
 <div class="pagination-content" id="pagination-content">
@@ -36,7 +36,7 @@
                         </a>
                         <ul class="product__hover">
                             <li><a href="#"><img src="../img/icon/heart.png" alt=""></a></li>
-                            <li>
+                            <li class="compare">
                                 <a href="#"><img src="../img/icon/compare.png" alt=""> <span>Compare</span></a>
                             </li>
                             <li><a href="#"><img src="../img/icon/search.png" alt=""></a></li>
